# agentcard-disco

./: .gitignore  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentcard-disco-site/: index.html
server/: auth.py  main.py  register.py  requirements.txt  score.py  usage.py
src/agentcard_disco/: __init__.py
src/agentcard_disco/cli/: config.py  main.py
src/agentcard_disco/models/: __init__.py  agent_card.py
src/agentcard_disco/parser/: __init__.py  loader.py
src/agentcard_disco/reporting/: __init__.py  exporters.py  terminal.py
src/agentcard_disco/scoring/: __init__.py  ai_quality.py  completeness.py  engine.py  metadata_richness.py  result.py  search_alignment.py  semantic_specificity.py
tests/fixtures/: good_card.json  minimal_card.json
tests/unit/: test_ai_quality.py  test_phase1.py  test_phase2.py  test_phase3.py  test_url_loader.py
