[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcard-disco"
version = "0.1.0"
description = "Score and optimize A2A Agent Cards for discoverability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Chinemeze" }]
keywords = ["a2a", "agent", "discoverability", "agent-card", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Install with: pip install "agentcard-disco[deep]"
deep = [
    "google-genai>=1.0",
]

[project.scripts]
agentcard-disco = "agentcard_disco.cli.main:cli"

[project.urls]
Homepage = "https://github.com/chinemeze/agentcard-disco"
Issues = "https://github.com/chinemeze/agentcard-disco/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcard_disco"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
files = ["src/agentcard_disco"]
